--- a/react-oracle/src/styles/layout.css
+++ b/react-oracle/src/styles/layout.css
@@ -73,3 +73,10 @@ div.layout-connection-container {
     border-radius: 5px;
     overflow: hidden;
 }
+
+div.layout-sql-editor-container {
+    margin-top: 10px;
+    height: 40vh;
+    outline: none;
+    outline-offset: -1px;
+}
