--- a/react-oracle/src/styles/layout.css
+++ b/react-oracle/src/styles/layout.css
@@ -13,6 +13,15 @@ html, body, #root
 
 }
 
+
+/*buttons*/
+button {
+    font-size:16px;
+    min-width: 100px;
+    background: #ccc;
+    padding: 5px;
+}
+
 /* creates a margin without creating a scrollbar */
 div.layout-outermost-container {
     height: 100%;
@@ -64,7 +73,7 @@ div.layout-right-of-workspaces-container > div {
     outline-offset: 0px;
 }
 
-div.layout-connection-container {
+div.layout-connection-container, div.layout-commands-container {
     box-sizing: border-box; 
     height: 40px;
     line-height: 25px; /*height - (padding * 2) - padding*/
@@ -74,9 +83,35 @@ div.layout-connection-container {
     overflow: hidden;
 }
 
+
 div.layout-sql-editor-container {
     margin-top: 10px;
-    height: 40vh;
+    height: 42vh;  /*scale the sql editor size here*/
     outline: none;
     outline-offset: -1px;
+}
+
+div.layout-commands-container {
+    display:flex;
+    height:fit-content;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    text-align: right;
+}
+
+div.layout-commands-result-text {
+    outline:none;
+    outline-offset: -1px;
+    flex-grow: 1;
+    text-align:left;
+    margin-right:5px;
+}
+
+div.layout-results-container {
+    outline: none;
+    outline-offset: -1px;
+    box-sizing: border-box;
+    padding-top: 5px;
+    flex-grow: 1;
+    height: 0px;
 }
