--- a/react-oracle/src/styles/results-viewer.css
+++ b/react-oracle/src/styles/results-viewer.css
@@ -151,5 +151,10 @@ div.results-view-no-records-placeholder {
 }
 
 .results-viewer-cell-DATE {
-    text-align: center;
+    text-align: right;
+}
+
+.results-viewer-cell-NULL {
+    outline: 2px dotted rgba(100,100,100,10);
+    outline-offset: -3px;
 }
