--- a/react-oracle/src/styles/modal.css
+++ b/react-oracle/src/styles/modal.css
@@ -10,7 +10,7 @@
     background-color: rgba(0, 0, 0, 0.5);
   }
   .modal-container > div {
-    width:400px;
+    min-width:400px;
     height: fit-content;
     margin:auto;
     border: 1px solid white;
@@ -66,9 +66,44 @@
     padding: 5px;
     min-width: 75px;
     cursor: pointer;
-}
+    margin: 0px 3px 0px 3px;
+  }
 
 .modal-button:hover {
   background: white;
 }
+
+.save-modal-content {
+  outline: none;
+}
+
+.save-modal-content > div {
+  display: block;
+  height: 30px;
+  outline: none;
+  position: relative;
+  width: 450px;
+  text-align: left;
+}
+
+.save-modal-content > div > select, .save-modal-content > div > input {
+  position:absolute;
+  left: 80px;
+  top: 0px;
+  width: 320px;
+  height: 25px;
+  padding: none;
+  margin: none;
+  box-sizing: border-box;
+  border: none;
+}
+.save-modal-content > div > input {
+  width: 300px;
+  z-index: 100;
+}
+.save-modal-content > div > select:focus, .save-modal-content > div > input:focus {
+  border: none;
+  outline: none;
+}
+
 
