--- a/react-oracle/src/styles/queries.css
+++ b/react-oracle/src/styles/queries.css
@@ -14,5 +14,10 @@
 
 .layout-workspaces-container li {
     padding-left: 5px; 
+    padding-right: 5px; 
     cursor: pointer;
+}
+
+.layout-workspaces-container li.selected {
+    background: #444;
 }
