--- a/react-oracle/src/styles/results-viewer.css
+++ b/react-oracle/src/styles/results-viewer.css
@@ -158,7 +158,7 @@ div.results-view-no-records-placeholder {
     outline: 2px dotted rgba(100,100,100,10);
     outline-offset: -3px;
 }
-.results-viewer-cell-CLOB div {
+.results-viewer-cell-CLOB div, .results-viewer-cell-NCLOB div {
     text-align:center;
     color:#444; 
 }
